code/src/index.css
:root {
  --marigold: #ECA400;
  --marigold-opaque: #eca50060;
  --pale-green: #EAF8BF;
  --blue-sapphire: #006992;
  --indigo: #27476E;
  --indigo-opaque: #27476e9f;
}

* {
  font-family: "Inconsolata", monospace;
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

body {
  margin: 0;
  font-family: "Inconsolata", -apple-system, monospace, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: var(--indigo);
  
  line-height: 1.7rem;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.all-thoughts {
  width: 40em;
  max-width: 80vw;
  margin: 0 auto;
}

.card {
  background-color: var(--pale-green);
  box-shadow: 1rem 1rem var(--marigold);
  padding: 1rem;
  margin: 4rem;
  border: 2px solid var(--marigold);
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1rem;
  color: var(--indigo-opaque);
}
/* 
.thought {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1rem;
  color: var(--indigo-opaque);
} */

.thought-header,
label {
  grid-column: span 2;
  color: var(--indigo);
}

.add-thought-header {
  margin-bottom: 1rem;
}

.textarea {
  width: 100%;
  height: 3rem;
}

button {
  border-radius: 2rem;
  padding: 10px;
  border: none;
  background-color: var(--marigold-opaque);
  transition: background-color .3s ease;
  display: inline-grid;
  justify-content: center;
  align-items: center;
}

button:hover {
  background-color: var(--marigold);
}

.likes-container {
  align-self: center;
}

.number-of-likes {
  display: inline;
}

.posted-date {
  justify-self: end;
  align-self: center;
}

.submit-button {
  display: flex;
}

